Switching to static nav from fixed for ease of styling on mobile

--- a/app/assets/stylesheets/layout.css.scss
+++ b/app/assets/stylesheets/layout.css.scss
@@ -1,9 +1,5 @@
 @import 'colors';
 
-body {
-  padding-top: 70px;
-}
-
 a .caret {
   margin-left: 10px;
 }
